Add RoboGuice integration Add SpringCLient Add tests

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,8 @@
     <string name="title_activity_webimage">WebimageActivity</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="menu_item_categories_title">Categories</string>
+    <string name="menu_item_feeds_title">Feeds</string>
+    <string name="menu_item_users_title">Users</string>
 
 </resources>
